Mob Editor v0.1: stabilize client UI and protocol sessions